--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,74 +2,86 @@
     margin: 0;
     padding: 0;
 }
+
 .mySlides {
     display: none;
-  }
-  .slideshow-container {
-    max-width:100%;
+}
+
+.slideshow-container {
+    max-width: 100%;
     height: 700px;
     position: relative;
     /* margin: auto; */
-  }
-  .slideshow-container img{
+}
+
+.slideshow-container img {
     min-height: 700px;
     height: 100vh;
     object-fit: cover;
-  }
+}
 
-  .prev,
-  .next {
+.prev,
+.next {
     cursor: pointer;
     position: absolute;
     top: 50%;
-    color:white;
+    color: white;
     width: 70px;
     height: 70px;
     background-color: #408858;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s;
-    border-radius:50%;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     opacity: 0;
     transition: .4s;
-  }
-  .slideshow-container:hover .prev, .slideshow-container:hover .next{
-    opacity: 1;
-  }
-  .prev{
-    left: 90px;
-  }
-  .next {
-    right: 90px;
-  }
+}
 
-  header{
+.slideshow-container:hover .prev,
+.slideshow-container:hover .next {
+    opacity: 1;
+}
+
+.prev {
+    left: 90px;
+}
+
+.next {
+    right: 90px;
+}
+
+header {
     position: relative;
-  }
-  .slides-left{
+}
+
+.slides-left {
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 10;
 
-  }
-.header-center{
+}
+
+.header-center {
     width: 55%;
     padding: 0 40px;
     position: absolute;
     top: 250px;
 }
-.header-center-left{
+
+.header-center-left {
     left: 150px;
-  }
-.header-center-right{
+}
+
+.header-center-right {
     right: 150px;
     text-align: right;
-  }
+}
+
 .header-center h2 {
     font-size: 35px;
     color: #112433;
@@ -134,6 +146,7 @@
     transform: scaleY(1);
     transition: 1s;
 }
+
 .header-icons {
     width: 100%;
     box-sizing: border-box;
@@ -210,6 +223,7 @@ nav {
     color: #112433;
 
 }
+
 .teze {
     position: fixed;
     background-color: #fff;
@@ -220,6 +234,7 @@ nav {
     z-index: 10000;
     transition: 0.4s;
 }
+
 .modal {
     width: 100%;
     background-color: #0d1f2d;
@@ -246,6 +261,7 @@ nav {
     outline: none;
     background-color: transparent;
 }
+
 .nav-button i {
     background: #fff;
     padding: 15px;
@@ -267,6 +283,7 @@ nav {
     color: #fff;
     transition: 0.4s;
 }
+
 aside {
     width: 400px;
     height: 100vh;
@@ -288,29 +305,34 @@ aside i {
     position: absolute;
     right: 30px;
 }
-.aside-img  {
+
+.aside-img {
     width: 280px;
     height: 165.7px;
 }
-.aside-img img{
+
+.aside-img img {
     width: 100%;
     height: 100%;
 }
-.aside-center{
+
+.aside-center {
     display: flex;
     align-items: center;
-    justify-content: center ;
+    justify-content: center;
     gap: 20px;
     flex-direction: column;
 }
-.aside-center-1 h4{
+
+.aside-center-1 h4 {
     font-family: 'Rubik', sans-serif;
     color: #fff;
     font-size: 20px;
     font-weight: 400;
 
 }
-.aside-center-1 p{
+
+.aside-center-1 p {
     color: #fff;
     opacity: .7;
     margin: 0;
@@ -320,14 +342,16 @@ aside i {
     line-height: 30px;
     font-family: 'Rubik', sans-serif;
 }
-.aside-center-2 h4{
+
+.aside-center-2 h4 {
     font-family: 'Rubik', sans-serif;
     color: #fff;
     font-size: 20px;
     font-weight: 400;
 
 }
-.aside-center-2 p{
+
+.aside-center-2 p {
     color: #2b7443;
     opacity: .7;
     margin: 0;
@@ -403,7 +427,8 @@ aside i {
     font-family: 'Rubik', sans-serif;
     z-index: 1;
 }
-.harvest-text a::after{
+
+.harvest-text a::after {
     position: absolute;
     content: "";
     top: 0;
@@ -417,6 +442,7 @@ aside i {
     background-color: #ae4c51;
 
 }
+
 .harvest a:hover::after {
     transform: scaleY(1);
     transition: 1s;
@@ -428,7 +454,8 @@ aside i {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 704px;
+    height: fit-content;
+    min-height: 704px;
     margin-top: 100px;
     flex-direction: column;
 }
@@ -477,7 +504,12 @@ aside i {
     font-family: 'Rubik', sans-serif;
 }
 
-.heading-product ul li:first-child::after {
+.active {
+    color: #2b7443 !important;
+    text-align: center;
+}
+
+.active::after {
     height: 6px;
     width: 100%;
     content: url(http://ecoharvest.farm/img/shape/1.png);
@@ -485,9 +517,7 @@ aside i {
     left: 0;
     top: 15px;
     display: block;
-
 }
-
 .heading-product ul li:not(:last-child)::before {
     position: absolute;
     content: "";
@@ -495,10 +525,8 @@ aside i {
     width: 2px;
     background: #e9e9e9;
     right: -6px;
-
     top: -3px;
     display: block;
-
 }
 
 .heading-product h1 {
@@ -515,6 +543,7 @@ aside i {
 
 .product-images {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     flex-direction: row;
@@ -522,7 +551,6 @@ aside i {
 }
 
 .product-cart {
-
     text-align: center;
 }
 
